SSCSFT-139 Issue HEF manually from any case state